<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">微型公社</string>
    <string name="app_nointernet">没有网络连接,请检查网络后重试</string>
    <string name="app_timeout">操作超时</string>
    <string name="app_reason">失败原因</string>
    <string name="app_phonenotnull">手机号不能为空</string>
    <string name="app_passnotnull">密码不能为空</string>
    <string name="app_codenotnull">验证码不能为空</string>
    <string name="app_passlength">密码长度需大于6位</string>
    <string name="app_notice">提示信息</string>
    <string name="app_success">成功</string>
    <string name="app_unsuccess">失败</string>
    <string name="app_cancelregister">再次按返回键将取消本次注册</string>
    <string name="app_messages">消息列表</string>
    <string name="app_nogroup">未分组</string>
    <string name="app_cameranotready">相机故障,重新打开试试~~</string>
    <string name="page_friend">密友圈</string>
    <string name="page_group">群组</string>
    <string name="page_square">广场</string>
    <string name="circleitem1_1">广场</string>
    <string name="circleitem1_2">群组</string>
    <string name="circleitem1_3">Hot</string>
    <string name="circleitem1_4">我</string>
    <string name="circleitem2_1">我的名片</string>
    <string name="circleitem2_2">扫一扫</string>
    <string name="circleitem2_3">我的Hot</string>
    <string name="circleitem2_4">返回</string>
    <string name="circleitem2_5">我的账户</string>
    <string name="circleitem2_6">密友圈</string>
    <string name="scan_invalid">无效请求</string>
    <string name="scan_weblogin">确定网页登陆?</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mc_businesscard">名片</string>
    <string name="circleMenu_back">返回</string>
    <string name="circleMenu_pageName"></string>
    <string name="btn_moremessages">点击查看更多</string>
    <string name="btn_newgroup">新建分组</string>
    <string name="btn_findmorefriend">找到更多密友</string>
    <string name="btn_login">登    录</string>
    <string name="btn_register">没有账号/注册</string>
    <string name="btn_clogin">验证码登录</string>
    <string name="btn_newfriends">新的好友</string>
    <string name="tv_login">登录</string>
    <string name="et_phone">请输入手机号</string>
    <string name="et_pass">请输入密码</string>
    <string name="tv_clogin">验证码登录</string>
    <string name="et_code">请输入验证码</string>
    <string name="btn_sendcode">发送验证码</string>
    <string name="btn_next">下 一 步</string>
    <string name="tv_enterphone">输入手机号</string>
    <string name="tv_entercode">输入验证码</string>
    <string name="tv_resend">重新发送</string>
    <string name="tv_setpass">设置密码</string>
    <string name="tv_sendto">我们已将短信发送到</string>
    <string name="tv_sendcode">发送验证码</string>
    <string name="tv_search">精确查找</string>
    <string name="btn_search">查  找</string>
    <string name="tv_friendnotfound">没有找到</string>
    <string name="tv_friendnotfounddesc">对方尚未加入微型公社</string>
    <string name="btn_callfor">发送邀请</string>
    <string name="text_verify">对方启用了朋友验证</string>
    <string name="et_verify">请输入验证消息</string>
    <string name="btn_send">发送</string>
    <string name="tv_modifyuserinfo">修改个人信息</string>
    <string name="tv_head">头像</string>
    <string name="tv_nickname">名字</string>
    <string name="tv_phone">手机</string>
    <string name="tv_mainbusiness">主要业务</string>
    <string name="tv_mainbusinesscount">0/240</string>
    <string name="tv_mainbusinessrandom">随机生成</string>
    <string name="tv_save">保存</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_picture">相册</string>
    <string name="tv_camera">拍照</string>
    <string name="message_picture">[图片]</string>

</resources>