<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="290dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/frame_background"
        android:paddingTop="7dp"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/tv_plogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/tv_login"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/tv_plogin"
            android:layout_below="@+id/tv_plogin"
            android:layout_marginTop="8dp"
            android:background="#9fff"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_plogin_phone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/iv_line"
            android:layout_alignRight="@+id/iv_line"
            android:layout_below="@+id/iv_line"
            android:layout_marginTop="15dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/et_phone"
            android:inputType="number"
            android:textColor="#fff"
            tools:ignore="TextFields" >

        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/et_plogin_pass"
            android:layout_alignRight="@+id/et_plogin_pass"
            android:layout_below="@+id/et_plogin_pass"
            android:layout_marginTop="15dp"
            android:background="#2fff"
            android:text="@string/btn_login"
            android:textColor="#fff"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_plogin_pass"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/et_plogin_phone"
            android:layout_alignRight="@+id/et_plogin_phone"
            android:layout_below="@+id/et_plogin_phone"
            android:layout_marginTop="15dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/et_pass"
            android:inputType="textPassword"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/btn_login"
            android:layout_alignRight="@+id/btn_login"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="8dp"
            android:background="#2fff"
            android:text="@string/btn_register"
            android:textColor="#fff"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_clogin"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignRight="@+id/btn_register"
            android:layout_below="@+id/btn_register"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/btn_clogin"
            android:textColor="@color/click_textcolor"
            android:textSize="15sp" />
    </RelativeLayout>
</RelativeLayout>