<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="240dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="63dp"
        android:background="@drawable/frame_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/tv_clogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/tv_clogin"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/tv_clogin"
            android:layout_below="@+id/tv_clogin"
            android:layout_marginTop="8dp"
            android:background="#9fff"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_clogin_phone"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/iv_line2"
            android:layout_alignRight="@+id/iv_line2"
            android:layout_below="@+id/iv_line2"
            android:layout_marginTop="15dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/et_phone"
            android:inputType="number"
            android:textColor="#fff"
            android:textColorHint="#ddd"
            tools:ignore="TextFields" >
        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/et_clogin_code"
            android:layout_alignRight="@+id/et_clogin_code"
            android:layout_below="@+id/et_clogin_code"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_login"
            android:textColor="#fff"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_clogin_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/et_clogin_phone"
            android:layout_alignRight="@+id/et_clogin_phone"
            android:layout_below="@+id/et_clogin_phone"
            android:layout_marginTop="15dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/et_code"
            android:inputType="number"
            android:textColor="#fff"
            android:textColorHint="#ddd" />

        <TextView
            android:id="@+id/tv_sendcode"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignRight="@+id/btn_login"
            android:layout_below="@+id/btn_login"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/btn_sendcode"
            android:textColor="@color/click_textcolor"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>