<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_regpanel_code"
        android:layout_width="fill_parent"
        android:layout_height="215dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="63dp"
        android:background="@drawable/frame_background"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/textView_groupNameAndMemberCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/tv_entercode"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/textView_groupNameAndMemberCount"
            android:layout_below="@+id/textView_groupNameAndMemberCount"
            android:layout_marginTop="8dp"
            android:background="#9fff"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_sendto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/iv_line"
            android:layout_below="@+id/iv_line"
            android:layout_marginTop="10dp"
            android:text="@string/tv_sendto"
            android:textColor="#ddd" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_sendto"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/tv_sendto"
            android:textColor="#eee" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/iv_line"
            android:layout_alignRight="@+id/iv_line"
            android:layout_below="@+id/tv_sendto"
            android:layout_marginTop="10dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/et_code"
            android:textColorHint="#ddd"
            android:inputType="number"
            android:textColor="#fff" >
        </EditText>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/et_code"
            android:layout_alignRight="@+id/et_code"
            android:layout_below="@+id/et_code"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background"
            android:text="@string/btn_next"
            android:textColor="#fff"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tv_sendcode"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_alignRight="@+id/btn_next"
            android:layout_below="@+id/btn_next"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/tv_resend"
            android:textColor="@color/click_textcolor"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>