<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_regpanel_pass"
        android:layout_width="fill_parent"
        android:layout_height="172dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="63dp"
        android:background="@drawable/frame_background"
        android:padding="10dp"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/textView_groupNameAndMemberCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/text_verify"
            android:textColor="#fff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_line2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignLeft="@+id/textView_groupNameAndMemberCount"
            android:layout_below="@+id/textView_groupNameAndMemberCount"
            android:layout_marginTop="8dp"
            android:background="#9fff"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/iv_line2"
            android:layout_alignRight="@+id/iv_line2"
            android:layout_below="@+id/iv_line2"
            android:layout_marginTop="20dp"
            android:background="#0999"
            android:ems="10"
            android:hint="@string/et_verify"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#ddd" >
        </EditText>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignLeft="@+id/et_message"
            android:layout_alignRight="@+id/et_message"
            android:layout_below="@+id/et_message"
            android:layout_marginTop="20dp"
            android:background="#2fff"
            android:text="@string/btn_send"
            android:textColor="#fff"
            android:textSize="19sp" />
    </RelativeLayout>

</RelativeLayout>